minor fix for overflow text and deleting mode before cur

--- a/css/styles.css
+++ b/css/styles.css
@@ -357,6 +357,9 @@ legend {
 
 .mode-name {
   margin-top: 6px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   user-select: none;
 }
 
